@@ -1,3 +1,8 @@
+Wed Dec 27 04:58:22 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/fields.c: Removed use of varbuf* code from f_dependency(),
+    for a speedup.
+
 Wed Dec 27 04:55:14 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/fields.c: Detect and issue an error when a space is in a
